Src/Main/DevToolsX.Documents.Compilers/SeleniumUserInterface/Syntax/InternalSyntax/SeleniumUserInterfaceParser.g4
parser grammar SeleniumUserInterfaceParser;

options
{
	tokenVocab = SeleniumUserInterfaceLexer;
	                        
}

main: page EOF;

page: KPage name TOpenBrace TCloseBrace;

name: Identifier;
